tdf#88064 In add mode don't change SetCursor and KillSel functions

when shell is popped

Change-Id: Ic7b38563c4f05d4a1ccf792f21db42076a39947f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/111943
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>